[metadata]
name = tabled
version = 0.1.7
url = https://github.com/i2mint/tabled
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = Thor Whalen
description = A (key-value) data-object-layer to get (pandas) tables from a variety of sources with ease
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = tabled

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	pandas
	dol
        i2

